<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_marginTop="@dimen/vertical_activity"
    android:layout_marginBottom="@dimen/vertical_activity"
    android:layout_marginLeft="@dimen/horizontal_activity"
    android:layout_marginRight="@dimen/horizontal_activity"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/btn_move"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/vertical_activity"
        android:text="@string/move"/>

    <Button
        android:id="@+id/btn_move_data"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/vertical_activity"
        android:text="@string/move_data"/>

    <Button
        android:id="@+id/btn_call"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/vertical_activity"
        android:text="@string/call"/>

    <Button
        android:id="@+id/btn_browser"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/vertical_activity"
        android:text="@string/buka_browser"/>

    <Button
        android:id="@+id/btn_input_data"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/vertical_activity"
        android:text="@string/intent_eksplicit"/>

</LinearLayout>